@@ -1,339 +1,259 @@
 package com.optum.coe.automation.rally;
 
-import java.io.File;
+import java.io.BufferedReader;
 import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.io.InputStreamReader;
+import java.io.UnsupportedEncodingException;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Base64;
-import java.util.Collections;
 import java.util.List;
-import org.json.JSONObject;
-
-import com.google.gson.Gson;
-import com.google.gson.JsonArray;
-import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
-import com.rallydev.rest.RallyRestApi;
-import com.rallydev.rest.request.CreateRequest;
-import com.rallydev.rest.response.CreateResponse;
-
+import java.util.Map;
+import org.apache.http.HttpEntity;
+import org.apache.http.ParseException;
+import org.apache.http.util.EntityUtils;
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.json.JSONArray;
+import org.json.JSONObject;
 
-public class RallyOperation {
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParser;
 
-    // Initialization of Logger for RallyOperation Class
+public class JiraOperation {
+
+    // Initialization of the class member variables. This section can be updated in future if more member variables are added during integration if needed.
+    private String jiraBaseURL;
+    private String jiraApiKey;
+    private String jiraProjectKey;
+    private String maxChunk;
+    private String tcFileAttachmentDownloadLocation;
+    private String tsFileAttachmentDownloadLocation;
+
+    // Logger Initialization for JiraOperation Class
     private static final Logger logger = LogManager.getLogger();
 
-    // Initialization of Rally related properties.
-    private String rallyBaseURL;
-    private String rallyApiKey;
-    private String rallyProjectKey;
-    private String rallyUser;
-   
-    /*
-     * A Constructor loads the value from .properties file. These values will be
-     * loaded as soon as an object is created for this class. Rally Base URL and
-     * Rally API Key values are loaded from .properties file.
-     */
-    public RallyOperation() {
-        rallyBaseURL = ConfigLoader.getConfigValue("RALLY_BASE_URL");
-        rallyApiKey = ConfigLoader.getConfigValue("RALLY_API_KEY");
-        rallyProjectKey = ConfigLoader.getConfigValue("RALLY_PROJECT_REF");
-        rallyUser = ConfigLoader.getConfigValue("RALLY_USER_REF");
-        logger.info("Rally values for the project key " + rallyProjectKey + " are assigned from rally_migration_config.properties file");
-        logger.log(Level.getLevel("VERBOSE"), "Below the values assigned from rally_migration_config.properties file. \nRally Base URL - " + rallyBaseURL + "\nRally Project Reference " + rallyProjectKey);
+    // Constructor loads values from .properties file.
+    public JiraOperation() {
+        jiraBaseURL = ConfigLoader.getConfigValue("JIRA_BASE_URL");
+        jiraApiKey = ConfigLoader.getConfigValue("JIRA_API_TOKEN");
+        jiraProjectKey = ConfigLoader.getConfigValue("JIRA_PROJECT_KEY");
+        maxChunk = ConfigLoader.getConfigValue("MAX_VALUE_CHUNK");
+        tcFileAttachmentDownloadLocation = ConfigLoader.getConfigValue("TEST_CASE_FILE_ATTACHMENT_LOCATION");
+        tsFileAttachmentDownloadLocation = ConfigLoader.getConfigValue("TEST_STEP_FILE_ATTACHMENT_LOCATION");
+
+        logger.info("Jira values for the project key " + jiraProjectKey + " are assigned from rally_migration_config.properties file");
+        logger.log(Level.getLevel("VERBOSE"),
+                "Below the values assigned from rally_migration_config.properties file. \nJira Base URL - " + jiraBaseURL
+                        + "\nJira Project Key " + jiraProjectKey + "\nMax Chunk value - " + maxChunk
+                        + "\nTest Case File Attachment Download location - " + tcFileAttachmentDownloadLocation
+                        + "\nTest Step File Attachment location - " + tsFileAttachmentDownloadLocation);
     }
 
+    public ArrayList<String> getJiraNonMigratedTestcaseKeys() {
+        ArrayList<String> testCaseKeys = new ArrayList<>();
 
-
-    /*
-     * Create method to create a new Rally Test case and returns the Test case OID
-     * if created successfully A Json Object is passed to this method which contains
-     * the Jira Testcase details which is required to create the Rally Testcase
-     */
-    public String createRallyTestcase(JsonObject jiraJson) throws IOException {
-        String rallyTestCaseOID = null;
-        JsonObject rallyJson = new JsonObject();
-        rallyJson.addProperty("projectRef", rallyProjectKey);
-
-        JsonObject testCase = new JsonObject();
-
-        // Safely retrieve the name element, with a fallback default name
-        String name = Utils.getJsonString(jiraJson, "name");
-        if (name.isEmpty()) {
-            name = "Default Test Case Name - No TestCase name found in Jira";
-        }
-        testCase.addProperty("Name", name);
-
-        testCase.addProperty("Method", "Manual");
-
-        // Safely retrieve the priority element, with a fallback default priority
-        String priority = Utils.getJsonString(jiraJson, "priority");
-        if (priority.equalsIgnoreCase("Normal")) {
-            priority = "Useful";
-        } else if (priority.isEmpty()) {
-            priority = "Default Priority";
-        }
-        testCase.addProperty("Priority", priority);
-
-        testCase.addProperty("Owner", "/user/" + name);
-
-        // Safely retrieve the status element, with a fallback ready status
-        String status = Utils.getJsonString(jiraJson, "status");
-        testCase.addProperty("Ready", status.equals("Ready"));
-
-        // Handle labels/tags
-        JsonArray tagsArray = new JsonArray();
-        if (jiraJson.has("labels")) {
-            JsonArray labelsArray = jiraJson.getAsJsonArray("labels");
-            RallyRestApi restApi = null;
-            try {
-                restApi = new RallyRestApi(new URI(rallyBaseURL), rallyApiKey);
-                for (JsonElement labelElement : labelsArray) {
-                    String label = labelElement.getAsString();
-                    JsonObject tag = Utils.findOrCreateTag(restApi, label);
-                    if (tag != null) {
-                        tagsArray.add(tag);
-                    }
-                }
-            } catch (URISyntaxException e) {
-                logger.error("URI Syntax error for the URL " + rallyBaseURL + ". Please check the URL.", e);
-            } finally {
-                if (restApi != null) {
-                    restApi.close();
-                }
-            }
-            testCase.add("Tags", tagsArray);
-        }
-		return rallyTestCaseOID;
-        }
-
-    /*
-     * Method to attach files to a Rally Test Case Test case OID and List of file
-     * paths are given as input arguments
-     */
-    public List<String> attachFilestoRallyTestcase(String rallyTestCaseOID, List<String> filePaths) {
-        List<String> testcaseAttachmentOIDs = new ArrayList<String>();
-        RallyRestApi rallyApi = null;
-
+        String encodedKey = null;
         try {
-            // Open Rally API connection
-            rallyApi = new RallyRestApi(new URI(rallyBaseURL), rallyApiKey);
-        } catch (URISyntaxException e) {
-            logger.error("Rally Base URL has some syntax error.", e);
+            encodedKey = URLEncoder.encode(
+                    "projectKey = " + jiraProjectKey
+                            + " AND \"Migrate Test to Rally\" = true AND \"TestCase Migrated\" = false",
+                    StandardCharsets.UTF_8.toString());
+        } catch (UnsupportedEncodingException e) {
+            logger.error("Error while encoding a part of URL ", e);
         }
 
-        try {
-            for (String filePath : filePaths) {
-                try {
-                    // Call method to attach the file and return the OID of the attachment in Rally
-                    testcaseAttachmentOIDs.add(attachFileToRallyTestcase(rallyApi, rallyTestCaseOID, filePath));
-                    logger.info("File " + filePath + " is attached for the testcase OID " + rallyTestCaseOID
-                            + " in Rally successfully");
-                } catch (IOException e) {
-                    testcaseAttachmentOIDs.clear();
-                    logger.error("File " + filePath + " is not attached to Rally due to IO exception.", e);
-                    return testcaseAttachmentOIDs;
-                }
-            }
-        } finally {
+        String url = jiraBaseURL + "/rest/atm/1.0/testcase/search?fields=key&maxResults=" + maxChunk + "&query=" + encodedKey;
+        logger.info("String URL to get non migrated testcase keys from Jira " + url);
+
+        HttpEntity response = Utils.getJiraResponse(url, jiraApiKey);
+
+        if (response != null) {
+            String result = null;
             try {
-                rallyApi.close();
-            } catch (IOException e) {
-                logger.error("Rally API resource is not closed due to IO exception.", e);
+                result = EntityUtils.toString(response);
+            } catch (ParseException | IOException e) {
+                logger.error("Error while parsing the Json response", e);
             }
+            JSONArray jsonArray = new JSONArray(result);
+
+            for (int i = 0; i < jsonArray.length(); i++) {
+                JSONObject jsonObject = jsonArray.getJSONObject(i);
+                String key = jsonObject.getString("key");
+                logger.info("Key retrieved: " + key);
+                testCaseKeys.add(key);
+            }
+
+        } else {
+            logger.error("Response is NULL from while retrieving non migrated keys from JIRA. Returning NULL");
         }
 
-        return testcaseAttachmentOIDs;
+        return testCaseKeys;
     }
 
-    /*
-     * Method to migrate test steps from JIRA to Rally
-     */
-    public void migrateTestSteps(String rallyTestCaseRef, List<JiraTestStep> jiraTestSteps, RallyRestApi rallyRestApi) {
-        // Reverse the Jira test steps order
-        Collections.reverse(jiraTestSteps);
+    public JsonObject getJiraTestCaseDetails(String testCaseKey) {
+        String jsonResponse = getJiraResponse(testCaseKey);
 
-        for (JiraTestStep step : jiraTestSteps) {
-            try {
-                // Create a new Json object for each test step
-                JsonObject newTestStep = new JsonObject();
-                newTestStep.addProperty("TestCase", rallyTestCaseRef);
-                newTestStep.addProperty("StepIndex", step.getIndex());
-                newTestStep.addProperty("Input", step.getDescription());
-                newTestStep.addProperty("ExpectedResult", step.getExpectedResult());
-                newTestStep.addProperty("TestData", step.getTestData());
+        // Create a JSONObject from the response
+        JSONObject jiraTestcaseJson = new JSONObject(jsonResponse);
 
-                // Handle attachments
-                List<String> attachmentPaths = JiraOperation.downloadStepAttachments(step);
-                List<String> rallyAttachmentRefs = uploadAttachmentsToRally(attachmentPaths, rallyRestApi, rallyTestCaseRef);
+        // Convert the JSONObject to a JsonObject using Gson
+        JsonObject gsonTestcaseJson = JsonParser.parseString(jiraTestcaseJson.toString()).getAsJsonObject();
 
-                if (!rallyAttachmentRefs.isEmpty()) {
-                    JsonArray attachmentsArray = new JsonArray();
-                    for (String attachmentRef : rallyAttachmentRefs) {
-                        JsonObject attachmentObj = new JsonObject();
-                        attachmentObj.addProperty("_ref", attachmentRef);
-                        attachmentsArray.add(attachmentObj);
-                    }
-                    newTestStep.add("Attachments", attachmentsArray);
-                }
-
-                // Create the Rally test case step
-                CreateRequest createRequest = new CreateRequest("testcasestep", newTestStep);
-                CreateResponse createResponse = rallyRestApi.create(createRequest);
-
-                // Log the creation result
-                if (createResponse.wasSuccessful()) {
-                    logger.info("Successfully created test step: " + step.getDescription());
-                } else {
-                    logger.error("Failed to create test step: " + step.getDescription() + ". Error: " + createResponse.getErrors());
-                }
-            } catch (Exception e) {
-                logger.error("Exception while creating test step: " + step.getDescription(), e);
-            }
-        }
+        return gsonTestcaseJson;
     }
 
-    /*
-     * Method to create a Rally Test Step
-     */
-    public String createRallyTestStep(String rallyTestCaseOID, JsonObject gsonTestStepJson) {
-        String rallyTestStepOID = null;
-        RallyRestApi restApi = null;
+    private String getJiraResponse(String testCaseKey) {
+        String urlString = jiraBaseURL + "/rest/atm/1.0/testcase/" + testCaseKey;
+        HttpURLConnection connection = null;
+        StringBuilder response = new StringBuilder();
 
         try {
-            restApi = new RallyRestApi(new URI(rallyBaseURL), rallyApiKey);
+            URL url = new URL(urlString);
+            connection = (HttpURLConnection) url.openConnection();
+            connection.setRequestMethod("GET");
+            connection.setRequestProperty("Authorization", "Bearer " + jiraApiKey);
+            connection.setRequestProperty("Content-Type", "application/json");
 
-            // Construct the JsonObject for the test step
-            JsonObject newTestStep = new JsonObject();
-            newTestStep.addProperty("TestCase", rallyTestCaseOID);
-            newTestStep.addProperty("StepIndex", gsonTestStepJson.get("index").getAsInt());
-            newTestStep.addProperty("Input", gsonTestStepJson.get("description").getAsString());
-            newTestStep.addProperty("ExpectedResult", gsonTestStepJson.get("expectedResult").getAsString());
-            newTestStep.addProperty("TestData", gsonTestStepJson.get("testData").getAsString());
-
-            CreateRequest createRequest = new CreateRequest("testcasestep", newTestStep);
-            CreateResponse createResponse = restApi.create(createRequest);
-
-            if (createResponse.wasSuccessful()) {
-                rallyTestStepOID = createResponse.getObject().get("_ref").getAsString();
-                logger.info("Successfully created test step: " + gsonTestStepJson.get("description").getAsString());
+            int responseCode = connection.getResponseCode();
+            if (responseCode == HttpURLConnection.HTTP_OK) {
+                BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+                String inputLine;
+                while ((inputLine = in.readLine()) != null) {
+                    response.append(inputLine);
+                }
+                in.close();
             } else {
-                logger.error("Error occurred creating test step in Rally.");
-                for (String error : createResponse.getErrors()) {
-                    logger.error(error);
-                }
+                logger.error("GET request to Jira failed with response code: " + responseCode);
             }
         } catch (Exception e) {
-            logger.error("Exception occurred while creating test step in Rally: ", e);
+            logger.error("Exception occurred while making GET request to Jira: ", e);
         } finally {
-            if (restApi != null) {
-                try {
-                    restApi.close();
-                } catch (IOException e) {
-                    logger.error("Exception occurred while closing Rally REST API: ", e);
-                }
+            if (connection != null) {
+                connection.disconnect();
             }
         }
-
-        return rallyTestStepOID;
+        return response.toString();
     }
 
-    /*
-     * Method to attach files to a Rally Test Step
-     */
-    public List<String> attachFilestoRallyTestStep(String rallyTestStepOID, List<String> filePaths) {
-        List<String> testStepAttachmentOIDs = new ArrayList<String>();
-        RallyRestApi rallyApi = null;
+    public List<String> jiraAttachmentsDownload(String testcaseKey, String testType, String attachmentType) {
+        List<String> fileAttachmentDownloadPaths = null;
+        String testAttachmentUrl = null;
+        if (testType.equals("testcase")) {
+            testAttachmentUrl = jiraBaseURL + "/rest/atm/1.0/testcase/" + testcaseKey + "/attachments";
+            logger.info("URL String for testcase attachments: " + testAttachmentUrl);
+        } else if (testType.equals("teststep") && attachmentType.equals("file")) {
+            testAttachmentUrl = jiraBaseURL + "/rest/atm/1.0/testcase/" + testcaseKey;
+            logger.info("URL String for teststep attachments: " + testAttachmentUrl);
+        } else if (testType.equals("teststep") && attachmentType.equals("embedded")) {
+            testAttachmentUrl = jiraBaseURL + "/rest/atm/1.0/testcase/" + testcaseKey;
+            logger.info("URL String for teststep embedded attachments: " + testAttachmentUrl);
+        } else {
+            logger.error("Usage of jiraAttachmentsDownload is not correct. The argument value should be either testcase or teststep");
+            return null;
+        }
+
+        HttpEntity response = Utils.getJiraResponse(testAttachmentUrl, jiraApiKey);
+        if (response != null) {
+            String result = null;
+            try {
+                result = EntityUtils.toString(response);
+                if (result.trim().isEmpty() || result.equals("{}") || result.equals("[]")) {
+                    logger.info("No Attachment URL found for the testcase key " + testcaseKey);
+                } else {
+                    logger.info("Attachment URL is found for the testcase key " + testcaseKey + "; JSON body while finding the attachment URL and name of the attachment: " + result);
+
+                    if (testType.equals("testcase")) {
+                        Map<String, String> testMap = Utils.pharseJsonGetAttachmentUrlAndName(result);
+                        fileAttachmentDownloadPaths = Utils.downloadFileAttachmentFromJiraTestCase(testMap, tcFileAttachmentDownloadLocation, jiraApiKey, testcaseKey);
+                    } else if (testType.equals("teststep") && attachmentType.equals("file")) {
+                        fileAttachmentDownloadPaths = Utils.downloadFileAttachmentFromTestStep(result, jiraApiKey, tsFileAttachmentDownloadLocation, testcaseKey, jiraBaseURL);
+                    } else if (testType.equals("teststep") && attachmentType.equals("embedded")) {
+                        List<String> descriptionAttachmentDownloadPaths, testDataAttachmentDownloadPaths, expectedResultAttachmentDownloadPaths;
+                        descriptionAttachmentDownloadPaths = Utils.downloadTestStepEmbeddedAttachments(result, jiraApiKey, tsFileAttachmentDownloadLocation, testcaseKey, jiraBaseURL, "description");
+                        testDataAttachmentDownloadPaths = Utils.downloadTestStepEmbeddedAttachments(result, jiraApiKey, tsFileAttachmentDownloadLocation, testcaseKey, jiraBaseURL, "testData");
+                        expectedResultAttachmentDownloadPaths = Utils.downloadTestStepEmbeddedAttachments(result, jiraApiKey, tsFileAttachmentDownloadLocation, testcaseKey, jiraBaseURL, "expectedResult");
+                        descriptionAttachmentDownloadPaths.addAll(testDataAttachmentDownloadPaths);
+                        descriptionAttachmentDownloadPaths.addAll(expectedResultAttachmentDownloadPaths);
+                        fileAttachmentDownloadPaths = descriptionAttachmentDownloadPaths;
+                    } else {
+                        logger.error("Usage of jiraFileAttachmentsDownload is not correct. The argument value should be either testcase or teststep");
+                        return null;
+                    }
+                }
+            } catch (ParseException | IOException e) {
+                logger.error("Error while parsing the Json response", e);
+            }
+
+        } else {
+            logger.error("Response is NULL from while retrieving attachments from JIRA. Returning NULL");
+        }
+        return fileAttachmentDownloadPaths;
+    }
+
+    public List<JiraTestStep> getTestStepsForTestCase(String testCaseKey) {
+        List<JiraTestStep> testSteps = new ArrayList<>();
 
         try {
-            rallyApi = new RallyRestApi(new URI(rallyBaseURL), rallyApiKey);
+            String urlString = jiraBaseURL + "/rest/atm/1.0/testcase/" + testCaseKey;
+            HttpURLConnection connection = (HttpURLConnection) new URL(urlString).openConnection();
+            connection.setRequestMethod("GET");
+            connection.setRequestProperty("Authorization", "Bearer " + jiraApiKey);
+            connection.setRequestProperty("Content-Type", "application/json");
 
-            for (String filePath : filePaths) {
-                try {
-                    testStepAttachmentOIDs.add(attachFileToRallyTestcase(rallyApi, rallyTestStepOID, filePath));
-                    logger.info("File " + filePath + " is attached for the test step OID " + rallyTestStepOID + " in Rally successfully");
-                } catch (IOException e) {
-                    testStepAttachmentOIDs.clear();
-                    logger.error("File " + filePath + " is not attached to Rally due to IO exception.", e);
-                    return testStepAttachmentOIDs;
+            int responseCode = connection.getResponseCode();
+            if (responseCode == HttpURLConnection.HTTP_OK) {
+                BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+                StringBuilder response = new StringBuilder();
+                String inputLine;
+                while ((inputLine = in.readLine()) != null) {
+                    response.append(inputLine);
                 }
-            }
-        } catch (URISyntaxException e) {
-            logger.error("Rally Base URL has some syntax error.", e);
-        } finally {
-            try {
-                rallyApi.close();
-            } catch (IOException e) {
-                logger.error("Rally API resource is not closed due to IO exception.", e);
-            }
-        }
+                in.close();
 
-        return testStepAttachmentOIDs;
-    }
+                JSONObject jiraTestCase = new JSONObject(response.toString());
+                JSONArray stepsArray = jiraTestCase.getJSONObject("testScript").getJSONArray("steps");
 
-    /*
-     * Helper method to upload attachments to Rally for a specific Test Case
-     */
-    private List<String> uploadAttachmentsToRally(List<String> attachmentPaths, RallyRestApi rallyRestApi, String rallyTestCaseRef) {
-        List<String> attachmentRefs = new ArrayList<>();
+                for (int i = 0; i < stepsArray.length(); i++) {
+                    JSONObject stepObject = stepsArray.getJSONObject(i);
 
-        for (String filePath : attachmentPaths) {
-            try {
-                // Upload each attachment and add the reference to the list
-                String attachmentRef = attachFileToRallyTestcase(rallyRestApi, rallyTestCaseRef, filePath);
-                if (attachmentRef != null) {
-                    attachmentRefs.add(attachmentRef);
+                    JiraTestStep testStep = new JiraTestStep();
+                    testStep.setId(stepObject.optInt("id", 0)); // Handling ID as an integer or default to 0
+                    testStep.setDescription(stepObject.optString("description", ""));
+                    testStep.setExpectedResult(stepObject.optString("expectedResult", ""));
+                    testStep.setIndex(stepObject.optInt("index", 0));
+                    testStep.setTestData(stepObject.optString("testData", ""));
+
+                    if (stepObject.has("attachments")) {
+                        JSONArray attachmentsArray = stepObject.getJSONArray("attachments");
+                        List<JiraAttachment> attachments = new ArrayList<>();
+                        for (int j = 0; j < attachmentsArray.length(); j++) {
+                            JSONObject attachmentObject = attachmentsArray.getJSONObject(j);
+                            JiraAttachment attachment = new JiraAttachment(
+                                    attachmentObject.optString("id", "0"), // Handling ID as a string
+                                    attachmentObject.optString("name", ""),
+                                    jiraBaseURL + "/rest/atm/1.0/attachment/" + attachmentObject.getInt("id")
+                            );
+                            attachments.add(attachment);
+                        }
+                        testStep.setAttachments(attachments);
+                    }
+
+                    testSteps.add(testStep);
                 }
-            } catch (IOException e) {
-                logger.error("Failed to upload attachment to Rally: " + filePath, e);
+            } else {
+                logger.error("GET request to Jira failed with response code: " + responseCode);
             }
+        } catch (Exception e) {
+            logger.error("Exception occurred while retrieving test steps for Jira test case: " + testCaseKey, e);
         }
 
-        return attachmentRefs;
-    }
-
-    /*
-     * Helper method to attach a file to a Rally Test Case
-     */
-    private String attachFileToRallyTestcase(RallyRestApi rallyApi, String testCaseId, String filePath) throws IOException {
-        // Step 1: Read the file and encode it in Base64
-        byte[] fileContent = Files.readAllBytes(Paths.get(filePath));
-        String encodedContent = Base64.getEncoder().encodeToString(fileContent);
-
-        // Step 2: Create a new attachment content record in Rally
-        JsonObject newAttachmentContent = new JsonObject();
-        newAttachmentContent.addProperty("Content", encodedContent);
-
-        CreateRequest attachmentContentCreateRequest = new CreateRequest("AttachmentContent", newAttachmentContent);
-        CreateResponse attachmentContentCreateResponse = rallyApi.create(attachmentContentCreateRequest);
-
-        if (!attachmentContentCreateResponse.wasSuccessful()) {
-            logger.error("Failed to create attachment content: " + attachmentContentCreateResponse.getErrors());
-            return null;
-        }
-
-        // Step 3: Create the attachment record and associate it with the test case
-        JsonObject newAttachment = new JsonObject();
-        newAttachment.addProperty("Artifact", testCaseId);
-        newAttachment.addProperty("Content", attachmentContentCreateResponse.getObject().get("_ref").getAsString());
-        newAttachment.addProperty("ContentType", "application/octet-stream");
-        newAttachment.addProperty("Name", new File(filePath).getName());
-
-        CreateRequest attachmentCreateRequest = new CreateRequest("Attachment", newAttachment);
-        CreateResponse attachmentCreateResponse = rallyApi.create(attachmentCreateRequest);
-
-        if (attachmentCreateResponse.wasSuccessful()) {
-            String attachmentOID = attachmentCreateResponse.getObject().get("_ref").getAsString();
-            return attachmentOID;
-        } else {
-            logger.error("Failed to create attachment: " + attachmentCreateResponse.getErrors());
-            return null;
-        }
+        return testSteps;
     }
 }
